Caminhos genéricos para futuros usuários

--- a/WebScraping.ipynb
+++ b/WebScraping.ipynb
@@ -44,7 +44,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "HEADERS = {\"accept\":\"*/*\",\"user-agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/130.0.0.0 Safari/537.36\"}\n",
+    "## Substituir o user agent pelo seu próprio user agent (Basta procurar seu user agent no google)\n",
+    "HEADERS = {\"accept\":\"*/*\",\"user-agent\": \"SEU_USER_AGENT_AQUI\"}\n",
     "URL = \"https://br.investing.com/commodities/real-time-futures\""
    ]
   },
@@ -196,7 +197,9 @@
     "\n",
     "### Caminho do chrome driver\n",
     "service = Service(\"./chromedriver.exe\")\n",
-    "chrome_options.add_argument(\"user-data-dir=C:/Users/IgorPio/AppData/Local/Google/Chrome/User Data\")\n",
+    "###Trcoar para seu local de armazenamento do chrome\n",
+    "user_data_patch = 'C:/Users/<SEU_USER>/AppData/Local/Google/Chrome/User Data'\n",
+    "chrome_options.add_argument(f\"user-data-dir={user_data_patch}\")\n",
     "\n",
     "# Configura o driver do Chrome\n",
     "driver = webdriver.Chrome(service=service, options=chrome_options)\n",
