Cofiguração user-agent

--- a/WebScraping.ipynb
+++ b/WebScraping.ipynb
@@ -45,7 +45,7 @@
    "outputs": [],
    "source": [
     "## Substituir o user agent pelo seu próprio user agent (Basta procurar seu user agent no google)\n",
-    "HEADERS = {\"accept\":\"*/*\",\"user-agent\": \"SEU_USER_AGENT_AQUI\"}\n",
+    "HEADERS = {\"accept\":\"*/*\",\"user-agent\": \"Mozilla/5.0 (Windows NT 10.0; Win64; x64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/130.0.0.0 Safari/537.36\"}\n",
     "URL = \"https://br.investing.com/commodities/real-time-futures\""
    ]
   },
@@ -434,9 +434,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Analise Commodities",
    "language": "python",
-   "name": "python3"
+   "name": "analisecommodities"
   },
   "language_info": {
    "codemirror_mode": {
