--- a/WebScraping.ipynb
+++ b/WebScraping.ipynb
@@ -18,7 +18,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 7,
+   "id": "b34c50a8-41a7-47e3-a699-60304aa9f8ca",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting selenium\n",
+      "  Using cached selenium-4.28.0-py3-none-any.whl.metadata (7.1 kB)\n",
+      "Requirement already satisfied: urllib3<3,>=1.26 in c:\\users\\igorpio\\desktop\\projetos\\webscrapinganalisededados\\kernel_webscrapping\\lib\\site-packages (from urllib3[socks]<3,>=1.26->selenium) (2.3.0)\n",
+      "Collecting trio~=0.17 (from selenium)\n",
+      "  Using cached trio-0.28.0-py3-none-any.whl.metadata (8.5 kB)\n",
+      "Collecting trio-websocket~=0.9 (from selenium)\n",
+      "  Using cached trio_websocket-0.11.1-py3-none-any.whl.metadata (4.7 kB)\n",
+      "Requirement already satisfied: certifi>=2021.10.8 in c:\\users\\igorpio\\desktop\\projetos\\webscrapinganalisededados\\kernel_webscrapping\\lib\\site-packages (from selenium) (2024.12.14)\n",
+      "Collecting typing_extensions~=4.9 (from selenium)\n",
+      "  Using cached typing_extensions-4.12.2-py3-none-any.whl.metadata (3.0 kB)\n",
+      "Collecting websocket-client~=1.8 (from selenium)\n",
+      "  Using cached websocket_client-1.8.0-py3-none-any.whl.metadata (8.0 kB)\n",
+      "Collecting attrs>=23.2.0 (from trio~=0.17->selenium)\n",
+      "  Using cached attrs-24.3.0-py3-none-any.whl.metadata (11 kB)\n",
+      "Collecting sortedcontainers (from trio~=0.17->selenium)\n",
+      "  Using cached sortedcontainers-2.4.0-py2.py3-none-any.whl.metadata (10 kB)\n",
+      "Requirement already satisfied: idna in c:\\users\\igorpio\\desktop\\projetos\\webscrapinganalisededados\\kernel_webscrapping\\lib\\site-packages (from trio~=0.17->selenium) (3.10)\n",
+      "Collecting outcome (from trio~=0.17->selenium)\n",
+      "  Using cached outcome-1.3.0.post0-py2.py3-none-any.whl.metadata (2.6 kB)\n",
+      "Collecting sniffio>=1.3.0 (from trio~=0.17->selenium)\n",
+      "  Using cached sniffio-1.3.1-py3-none-any.whl.metadata (3.9 kB)\n",
+      "Collecting cffi>=1.14 (from trio~=0.17->selenium)\n",
+      "  Using cached cffi-1.17.1-cp313-cp313-win_amd64.whl.metadata (1.6 kB)\n",
+      "Collecting wsproto>=0.14 (from trio-websocket~=0.9->selenium)\n",
+      "  Using cached wsproto-1.2.0-py3-none-any.whl.metadata (5.6 kB)\n",
+      "Collecting pysocks!=1.5.7,<2.0,>=1.5.6 (from urllib3[socks]<3,>=1.26->selenium)\n",
+      "  Using cached PySocks-1.7.1-py3-none-any.whl.metadata (13 kB)\n",
+      "Collecting pycparser (from cffi>=1.14->trio~=0.17->selenium)\n",
+      "  Using cached pycparser-2.22-py3-none-any.whl.metadata (943 bytes)\n",
+      "Collecting h11<1,>=0.9.0 (from wsproto>=0.14->trio-websocket~=0.9->selenium)\n",
+      "  Using cached h11-0.14.0-py3-none-any.whl.metadata (8.2 kB)\n",
+      "Using cached selenium-4.28.0-py3-none-any.whl (9.5 MB)\n",
+      "Using cached trio-0.28.0-py3-none-any.whl (486 kB)\n",
+      "Using cached trio_websocket-0.11.1-py3-none-any.whl (17 kB)\n",
+      "Using cached typing_extensions-4.12.2-py3-none-any.whl (37 kB)\n",
+      "Using cached websocket_client-1.8.0-py3-none-any.whl (58 kB)\n",
+      "Using cached attrs-24.3.0-py3-none-any.whl (63 kB)\n",
+      "Using cached cffi-1.17.1-cp313-cp313-win_amd64.whl (182 kB)\n",
+      "Using cached PySocks-1.7.1-py3-none-any.whl (16 kB)\n",
+      "Using cached sniffio-1.3.1-py3-none-any.whl (10 kB)\n",
+      "Using cached wsproto-1.2.0-py3-none-any.whl (24 kB)\n",
+      "Using cached outcome-1.3.0.post0-py2.py3-none-any.whl (10 kB)\n",
+      "Using cached sortedcontainers-2.4.0-py2.py3-none-any.whl (29 kB)\n",
+      "Using cached h11-0.14.0-py3-none-any.whl (58 kB)\n",
+      "Using cached pycparser-2.22-py3-none-any.whl (117 kB)\n",
+      "Installing collected packages: sortedcontainers, websocket-client, typing_extensions, sniffio, pysocks, pycparser, h11, attrs, wsproto, outcome, cffi, trio, trio-websocket, selenium\n",
+      "Successfully installed attrs-24.3.0 cffi-1.17.1 h11-0.14.0 outcome-1.3.0.post0 pycparser-2.22 pysocks-1.7.1 selenium-4.28.0 sniffio-1.3.1 sortedcontainers-2.4.0 trio-0.28.0 trio-websocket-0.11.1 typing_extensions-4.12.2 websocket-client-1.8.0 wsproto-1.2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install selenium"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "b8c0a2d6-a07d-4744-970f-6307ef8af1bc",
    "metadata": {},
    "outputs": [],
@@ -39,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 9,
    "id": "f62c9325-194a-4f75-bc80-c3c17f0e6476",
    "metadata": {},
    "outputs": [],
@@ -59,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "id": "c173fcb1-ba46-43d2-b6b3-46ec1698b6fc",
    "metadata": {},
    "outputs": [],
@@ -78,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "7089037a-d0f3-4fef-a586-b786cf4cdc43",
    "metadata": {},
    "outputs": [],
@@ -93,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 12,
    "id": "14511f96-6ee9-446c-aaf0-76d479b2c72d",
    "metadata": {},
    "outputs": [],
@@ -126,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "id": "a83452e9-14f8-49e6-b74f-b68ed34a99f8",
    "metadata": {},
    "outputs": [],
@@ -144,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "1b762b16-5711-4317-a751-c6ea5fe51dfd",
    "metadata": {
     "scrolled": true
@@ -179,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 19,
    "id": "9a6c3116-bf01-4418-a95e-6def754cfeca",
    "metadata": {},
    "outputs": [],
@@ -198,7 +262,7 @@
     "### Caminho do chrome driver\n",
     "service = Service(\"./chromedriver.exe\")\n",
     "###Trcoar para seu local de armazenamento do chrome\n",
-    "user_data_patch = 'C:/Users/<SEU_USER>/AppData/Local/Google/Chrome/User Data'\n",
+    "user_data_patch = 'C:/Users/IgorPio/AppData/Local/Google/Chrome/User Data'\n",
     "chrome_options.add_argument(f\"user-data-dir={user_data_patch}\")\n",
     "\n",
     "# Configura o driver do Chrome\n",
@@ -217,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "id": "87c20adb-eb6a-4721-b488-d505ff1b2164",
    "metadata": {},
    "outputs": [
@@ -339,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 21,
    "id": "e18900ef-a1d1-4aa9-b503-ceff575833c0",
    "metadata": {},
    "outputs": [],
@@ -354,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 22,
    "id": "33923800-b616-4554-8f2b-6d1166a28430",
    "metadata": {},
    "outputs": [],
@@ -383,7 +447,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 24,
+   "id": "8c6a33aa-12b5-4fa8-99ad-ccb20914a907",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting openpyxl\n",
+      "  Downloading openpyxl-3.1.5-py2.py3-none-any.whl.metadata (2.5 kB)\n",
+      "Collecting et-xmlfile (from openpyxl)\n",
+      "  Downloading et_xmlfile-2.0.0-py3-none-any.whl.metadata (2.7 kB)\n",
+      "Downloading openpyxl-3.1.5-py2.py3-none-any.whl (250 kB)\n",
+      "Downloading et_xmlfile-2.0.0-py3-none-any.whl (18 kB)\n",
+      "Installing collected packages: et-xmlfile, openpyxl\n",
+      "Successfully installed et-xmlfile-2.0.0 openpyxl-3.1.5\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install openpyxl\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
    "id": "a9ffc10e-afee-41c1-a272-16d3b6f4f416",
    "metadata": {},
    "outputs": [
@@ -410,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 26,
    "id": "b002ba94-175e-42b5-b888-b6fe024cfbba",
    "metadata": {},
    "outputs": [
@@ -420,7 +509,7 @@
        "<Popen: returncode: None args: ['start', './AnaliseCommodities.pbix']>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -434,9 +523,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Analise Commodities",
+   "display_name": "KernelWebScrapping",
    "language": "python",
-   "name": "analisecommodities"
+   "name": "kernelwebscrapping"
   },
   "language_info": {
    "codemirror_mode": {
@@ -448,7 +537,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.6"
+   "version": "3.13.1"
   }
  },
  "nbformat": 4,
